<resources>
    <string name="app_name">Multi Download Manager</string>
     <string name="download">Download</string>
    <string name="enterUrl">Enter Link</string>
    <string name="showDownloads">Show Downloads</string>
    <string name="enterLinkWarn">you must enter link of download</string>
    <string name="invalidLINK">Invalid LINK</string>
    <string name="alert">attention</string>
    <string name="yes">yes</string>
    <string name="downloadOf">Download of :</string>
    <string name="completed">completed</string>
    <string name="settings">Settings</string>
    <string name="license">License</string>
     <string name="setDirTitle">Directory Location</string>
    <string name="setDirSummary">Set Directory Location</string>
    <string name="prefsDirectoryLocation">prefsDirectoryLocation</string>
    <string name="notfindappsuitable">no apps can open this link</string>
    <string name="licenseText1">This project is open source , you can find the code at</string>
    <string name="licenseText2">https://github.com/omar-adel/MultiDownloadManager2</string>
    <string name="licenseText3">This project is Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="licenseText4">And Thanks to :</string>
    <string name="licenseText5">https://github.com/MindorksOpenSource/PRDownloader</string>
    <string name="licenseText6">I used this Repository in this application
        as prodownloader package inside modules package and modified it
    </string>

 
    <string name="select_directory">Select Directory</string>
    <string name="select_type">Select Type Of Download</string>
    <string name="menu_btn_1">Click 1</string>
    <string name="menu_btn_2">Click 2</string>
    <string name="noalert">no</string>
    <string name="done">ok</string>
    <string name="parallel">parallel in same time</string>
    <string name="queue">in queue , one after other</string>
    <string name="showNotificationsTitle">Show Notifications Or Not</string>
    <string name="showNotifications">Show Notifications</string>
    <string name="cancel_all_downloads_first">please cancel all downloads first</string>
    <string name="clearNotifications">Clear All Notifications</string>
    <string name="file_downloaded_before">this file is already downloaded before</string>


</resources>
