<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/matchParentStyle"
    >


    <ScrollView
        style="@style/matchParentStyle"
        android:layout_marginTop="@dimen/medium_margin">

        <LinearLayout
            style="@style/matchParentStyle"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtvLicense1"
                style="@style/matchWrapStyle"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/licenseText1"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtvLicense2"
                style="@style/matchWrapStyle"
                 android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/licenseText2"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtvLicense3"
                style="@style/matchWrapStyle"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/licenseText3"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtvLicense4"
                style="@style/matchWrapStyle"
                android:layout_marginTop="@dimen/medium_margin"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/licenseText4"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtvLicense5"
                style="@style/matchWrapStyle"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/licenseText5"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/txtvLicense6"
                style="@style/matchWrapStyle"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/licenseText6"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
